chore(Tera): removed safe filter from template used for testing

--- a/test_resources/templates/template_a/html/mail.html
+++ b/test_resources/templates/template_a/html/mail.html
@@ -3,6 +3,6 @@
 {% block head %}{% endblock head %}
 
 {% block body %}
-logo: <img src="cid:{{cids.logo | safe}}">
+logo: <img src="cid:{{cids.logo}}">
 Hy {{data.name}}.
 {% endblock body %}
