test(integration): improved end-2-end test
- now uses ^,$ to make sure there is nothing additional on the line
- make sure boundaryies which have to be the same are tested to be
  the same
- make tests robust wrt. indention spacing and editors removing tailing
  spaces (which might be produced in the template engine)

--- a/test_resources/templates/template_a/html/mail.html
+++ b/test_resources/templates/template_a/html/mail.html
@@ -1,8 +1,5 @@
 {% extends "base_mail.html" %}
 
-{% block head %}{% endblock head %}
+{% block head %}<meta charset="utf-8">{% endblock head %}
 
-{% block body %}
-logo: <img src="cid:{{cids.logo}}">
-Hy {{data.name}}.
-{% endblock body %}
+{% block body %}logo: <img src="cid:{{cids.logo}}"> Hy {{data.name}}.{% endblock body %}
